[package]
name = "depin-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
linera-sdk = { version = "0.14.0", git = "https://github.com/linera-io/linera-protocol.git", rev = "d55bd04ec0" }
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
linera-sdk = { version = "0.14.0", features = ["test", "wasmer"], git = "https://github.com/linera-io/linera-protocol.git", rev = "d55bd04ec0" }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "depin_demo_contract"
path = "src/contract.rs"

[[bin]]
name = "depin_demo_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
